separation of view and environement